<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search_cards"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bulk_read_cards"
        android:icon="@drawable/ic_library_add_white_24px"
        android:title="@string/bulk_read_cards"
        app:showAsAction="always"/>

    <item
        android:id="@+id/devices"
        android:icon="@drawable/ic_device_hub_white_24px"
        android:title="@string/devices"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>